Wider marker popover, fix overflow x problem

--- a/mean/public/css/main.less
+++ b/mean/public/css/main.less
@@ -279,7 +279,7 @@ textarea {
 
 .markerDetail {
   padding-top: 10px;
-  width: 250px;
+  width: 350px;
 
   .flex-row {
     margin-bottom: 10px;
@@ -294,7 +294,7 @@ textarea {
   .markerBodyContent {
     text-align: left;
     font-size: 16px;
-    margin-left: 5px;
+    padding-left: 5px;
     max-width: 100%;
 
     .creatorInfo {
